objects/Account.object
<CustomObject>
    <fields>
        <fullName>Acquired_Account__c</fullName>
        <label>Acquired Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquired Account – New Client</fullName>
                </value>
                <value>
                    <fullName>Acquired Account – Existing Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_ARA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All changes on this field should be approved by ARA Team #11203260</description>
        <inlineHelpText>Indicates active At Risk Account (ARA)</inlineHelpText>
        <label>Active ARA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Date_Time__c</fullName>
        <label>Active Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active_Planner_Org__c</fullName>
        <formula>If((Today() - Last_RFP_Sent_Month__c )&lt;=540,"YES","NO")</formula>
        <label>Active Planner Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acuvent_Account__c</fullName>
        <label>Acuvent Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Graham sold</fullName>
                </value>
                <value>
                    <fullName>McNeel Sold</fullName>
                </value>
                <value>
                    <fullName>Peter sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acuvent_Book_A_B__c</fullName>
        <label>Acuvent Book A/B</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Book A</fullName>
                </value>
                <value>
                    <fullName>Book B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acuvent_Bookings__c</fullName>
        <label>Acuvent Bookings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Book A</fullName>
                </value>
                <value>
                    <fullName>Book B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Agency_Type__c</fullName>
        <label>Ad Agency Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertising &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing</fullName>
                </value>
                <value>
                    <fullName>Direct Marketing</fullName>
                </value>
                <value>
                    <fullName>Full Service Advertising</fullName>
                </value>
                <value>
                    <fullName>Full Service Marketing</fullName>
                </value>
                <value>
                    <fullName>Interactive</fullName>
                </value>
                <value>
                    <fullName>Media Planning &amp; Buying Agency</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adoption_Status__c</fullName>
        <inlineHelpText>Customer Journey phase manually designated by CSA</inlineHelpText>
        <label>Passkey Success Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New customer</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Disinvest</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Adopting</fullName>
                </value>
                <value>
                    <fullName>Expanding</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Onboarding-no email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adv_w_Competitor__c</fullName>
        <label>Adv with Competitor</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adv_with_Competitor_Helper__c</fullName>
        <label>Adv with Competitor Helper</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertising_Agency__c</fullName>
        <label>Advertising Agency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AdvocateHub__Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influitive Referral Source</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate_Name__c</fullName>
        <label>Affiliate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allbound_ID__c</fullName>
        <description>Allbound app specific identifier</description>
        <inlineHelpText>Allbound app specific identifier</inlineHelpText>
        <label>Allbound ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allbound_Status__c</fullName>
        <description>This identifies the status for Allbound app</description>
        <inlineHelpText>This identifies the status for Allbound app</inlineHelpText>
        <label>Allbound Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Account_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apex Account Search</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Apex Account Search)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Management_Firm__c</fullName>
        <label>Asset Management Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_to_Adoption_Expert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For RFP team.</description>
        <label>Assign to Adoption Expert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_Risk_Reason__c</fullName>
        <label>At Risk Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Change in Leadership</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>PS Issues</fullName>
                </value>
                <value>
                    <fullName>Renewals Cycle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Ticket_Price_CT__c</fullName>
        <label>Average Ticket Price (CT)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$100 and up</fullName>
                </value>
                <value>
                    <fullName>$50-$99.99</fullName>
                </value>
                <value>
                    <fullName>$30-$49.99</fullName>
                </value>
                <value>
                    <fullName>$20-$29.99</fullName>
                </value>
                <value>
                    <fullName>$9.99-$19.99</fullName>
                </value>
                <value>
                    <fullName>$.01-$9.99</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Award_Excluding_Cancellations_P__c</fullName>
        <formula>If(of_RFPs_Awarded_P__c =0,0,of_RFPs_Awarded_P__c  / (Total_RFPs_Sent_P__c - of_Cancelled_RFPs_P__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award%(Excluding Cancellations)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Award_Including_Cancellations_P__c</fullName>
        <formula>If(of_RFPs_Awarded_P__c=0,0,of_RFPs_Awarded_P__c/Total_RFPs_Sent_P__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award %(Including Cancellations)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BD_Account_Status_Description__c</fullName>
        <description>This field has been re-purposed by Marketing, requested by Samridhi Kapoor in Governance Request - GR-0547</description>
        <label>Strategic Meetings Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Account_Status__c</fullName>
        <description>This field has been re-purposed by Marketing, requested by Samridhi Kapoor in Governance Request - GR-0547</description>
        <label>Travel Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Client_Type_del__c</fullName>
        <label>Revenue Potential</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Division__c</fullName>
        <label>Industry Credibilty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Tier__c</fullName>
        <label>Account Managment Tier(BD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT_Account_Status__c</fullName>
        <label>BT Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - New Account</fullName>
                </value>
                <value>
                    <fullName>B - Working</fullName>
                </value>
                <value>
                    <fullName>C - Qualified</fullName>
                </value>
                <value>
                    <fullName>D - Set</fullName>
                </value>
                <value>
                    <fullName>E - CSN Funnel</fullName>
                    <label>E - Funnel</label>
                </value>
                <value>
                    <fullName>G - Alt Team Working</fullName>
                    <label>F - Alt Team Working</label>
                </value>
                <value>
                    <fullName>H - Recycle</fullName>
                    <label>G - Recycle</label>
                </value>
                <value>
                    <fullName>I - Trash</fullName>
                    <label>H - Trash</label>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>F - Sourcing</fullName>
                    <isActive>false</isActive>
                    <label>F - Sourcing</label>
                </value>
                <value>
                    <fullName>TPP - Cross Product Funnel</fullName>
                    <isActive>false</isActive>
                    <label>TPP - Cross Product Funnel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT_Hotel_Master_ID__c</fullName>
        <label>BT Hotel Master ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Status_Details__c</fullName>
        <label>BT Status Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Account info</fullName>
                </value>
                <value>
                    <fullName>Billing/Legal</fullName>
                </value>
                <value>
                    <fullName>Follow Up Later Date</fullName>
                </value>
                <value>
                    <fullName>Language Barrier</fullName>
                </value>
                <value>
                    <fullName>No Set Potential</fullName>
                </value>
                <value>
                    <fullName>Not Interested/Sales Rejected</fullName>
                </value>
                <value>
                    <fullName>Poor Experience/Unhappy with System</fullName>
                </value>
                <value>
                    <fullName>Set Potential</fullName>
                </value>
                <value>
                    <fullName>Unhappy w/ Cvent</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Upsell/Cross-sell in Progress</fullName>
                </value>
                <value>
                    <fullName>Using Internal system</fullName>
                </value>
                <value>
                    <fullName>Using TPP/TMC</fullName>
                </value>
                <value>
                    <fullName>Using a Campetitor (Specify Competitor Name)</fullName>
                </value>
                <value>
                    <fullName>Program too small</fullName>
                </value>
                <value>
                    <fullName>Find POC</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>CSN-E in Negotiation</fullName>
                    <isActive>false</isActive>
                    <label>CSN-E in Negotiation</label>
                </value>
                <value>
                    <fullName>Client Selects Venues</fullName>
                    <isActive>false</isActive>
                    <label>Client Selects Venues</label>
                </value>
                <value>
                    <fullName>Closed Lost CSN-E</fullName>
                    <isActive>false</isActive>
                    <label>Closed Lost CSN-E</label>
                </value>
                <value>
                    <fullName>Closed Won for CSN-E</fullName>
                    <isActive>false</isActive>
                    <label>Closed Won for CSN-E</label>
                </value>
                <value>
                    <fullName>Far Below Commitment</fullName>
                    <isActive>false</isActive>
                    <label>Far Below Commitment</label>
                </value>
                <value>
                    <fullName>Find Sourcing POC</fullName>
                    <isActive>false</isActive>
                    <label>Find Sourcing POC</label>
                </value>
                <value>
                    <fullName>Future Sourcing Potential/Not Sourcing Now</fullName>
                    <isActive>false</isActive>
                    <label>Future Sourcing Potential/Not Sourcing Now</label>
                </value>
                <value>
                    <fullName>Interested - Multiple offsite events</fullName>
                    <isActive>false</isActive>
                    <label>Interested - Multiple offsite events</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <isActive>false</isActive>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Missing Key Features/Product Difficult to Use</fullName>
                    <isActive>false</isActive>
                    <label>Missing Key Features/Product Difficult to Use</label>
                </value>
                <value>
                    <fullName>No offsite Events</fullName>
                    <isActive>false</isActive>
                    <label>No offsite Events</label>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                    <isActive>false</isActive>
                    <label>Other (-Enter Details-)</label>
                </value>
                <value>
                    <fullName>Power</fullName>
                    <isActive>false</isActive>
                    <label>Power</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_Office_System__c</fullName>
        <label>Back Office System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>123Signup</fullName>
                </value>
                <value>
                    <fullName>44fish.com</fullName>
                </value>
                <value>
                    <fullName>Act-On</fullName>
                </value>
                <value>
                    <fullName>Acumen</fullName>
                </value>
                <value>
                    <fullName>Advanced CRM</fullName>
                </value>
                <value>
                    <fullName>Affiniscape (m360)</fullName>
                </value>
                <value>
                    <fullName>Alliance Tech</fullName>
                </value>
                <value>
                    <fullName>Alpha Software</fullName>
                </value>
                <value>
                    <fullName>Amadeus</fullName>
                </value>
                <value>
                    <fullName>aMember Pro</fullName>
                </value>
                <value>
                    <fullName>AMEX Card</fullName>
                </value>
                <value>
                    <fullName>Apollo</fullName>
                </value>
                <value>
                    <fullName>Association Management Online</fullName>
                </value>
                <value>
                    <fullName>AssociationVoice</fullName>
                </value>
                <value>
                    <fullName>Attendee Interactive</fullName>
                </value>
                <value>
                    <fullName>Attendify</fullName>
                </value>
                <value>
                    <fullName>Authorize.Net</fullName>
                </value>
                <value>
                    <fullName>Avectra</fullName>
                </value>
                <value>
                    <fullName>AWeber</fullName>
                </value>
                <value>
                    <fullName>Bernard Data Solutions</fullName>
                </value>
                <value>
                    <fullName>Blackboard</fullName>
                </value>
                <value>
                    <fullName>BuilderFusion</fullName>
                </value>
                <value>
                    <fullName>CAMMS</fullName>
                </value>
                <value>
                    <fullName>Canvas LMS</fullName>
                </value>
                <value>
                    <fullName>Capture</fullName>
                </value>
                <value>
                    <fullName>CDS (convention data services)</fullName>
                </value>
                <value>
                    <fullName>ChamberMaster</fullName>
                </value>
                <value>
                    <fullName>Ciboodle</fullName>
                </value>
                <value>
                    <fullName>Citi Virtual Card</fullName>
                </value>
                <value>
                    <fullName>CiviCRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_Attention_To__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Bill To - Attention To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountryCode__c</fullName>
        <label>Billing Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStateCode__c</fullName>
        <label>Billing State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Case</label>
        <referenceTo>BillingCase__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>Accor</fullName>
                </value>
                <value>
                    <fullName>AC Hotels</fullName>
                </value>
                <value>
                    <fullName>AC Hotels by Marriott</fullName>
                </value>
                <value>
                    <fullName>Adagio</fullName>
                </value>
                <value>
                    <fullName>Affinia</fullName>
                </value>
                <value>
                    <fullName>African Pride Hotels</fullName>
                </value>
                <value>
                    <fullName>Alila</fullName>
                </value>
                <value>
                    <fullName>Allegro</fullName>
                </value>
                <value>
                    <fullName>All Seasons</fullName>
                </value>
                <value>
                    <fullName>aloft</fullName>
                </value>
                <value>
                    <fullName>Americas Best Value Inn</fullName>
                    <label>Americas Best value Inn</label>
                </value>
                <value>
                    <fullName>AmericInn</fullName>
                </value>
                <value>
                    <fullName>AmeriHost Inn</fullName>
                </value>
                <value>
                    <fullName>AmeriSuites</fullName>
                </value>
                <value>
                    <fullName>Anantara</fullName>
                </value>
                <value>
                    <fullName>Andaz</fullName>
                </value>
                <value>
                    <fullName>Andel's</fullName>
                </value>
                <value>
                    <fullName>Angelo Hotels</fullName>
                </value>
                <value>
                    <fullName>Angsana Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>Apex Hotels</fullName>
                </value>
                <value>
                    <fullName>Aqua Hotels &amp; Resorts</fullName>
                </value>
                <value>
                    <fullName>ARAMARK Conference Centers</fullName>
                </value>
                <value>
                    <fullName>ARAMARK Parks and Destinations</fullName>
                </value>
                <value>
                    <fullName>Ascend Collection</fullName>
                </value>
                <value>
                    <fullName>ATAHOTELS</fullName>
                </value>
                <value>
                    <fullName>Atlantis</fullName>
                </value>
                <value>
                    <fullName>Auberge</fullName>
                </value>
                <value>
                    <fullName>Austria Trend Hotels</fullName>
                </value>
                <value>
                    <fullName>Autograph Collection (Marriott Affiliate)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <label>Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budgeting_Month__c</fullName>
        <inlineHelpText>Month indicated by the CVB/DMO that they begin their budgeting process</inlineHelpText>
        <label>Budgeting Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundles_RFP_Reports_Sales_MCV__c</fullName>
        <label>Bundles+RFP Reports Sales MCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Transient__c</fullName>
        <label>BT Hotel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Center__c</fullName>
        <label>Buying Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CART__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer At Risk of Termination</inlineHelpText>
        <label>CART</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPA_DPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCPA DPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCP_Account_Category__c</fullName>
        <formula>IF( 
First_Certified_Semester__c&amp;" "&amp;TEXT(First_Certified_in_Year__c) = 
Current_Semester__c&amp;" "&amp;TEXT(Current_Year__c), "NEW" , "REPEAT")</formula>
        <label>CCP Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCP_Account_Status__c</fullName>
        <label>CCP Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable/Univ Not a Fit</fullName>
                </value>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
                <value>
                    <fullName>Haven't Certified Recently</fullName>
                </value>
                <value>
                    <fullName>No Interest/Hard No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCP_Upload_Date__c</fullName>
        <label>CCP Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Ac_Scoring__c</fullName>
        <formula>Round((((CASE( of_Attendees_CC__c ,"1-100 attendees",5,"101-500 attendees",10,"501-1000 attendees",15,"1001-2500 attendees",20,"2501-5000 attendees",20,"Over 5000 attendees",20,0)+CASE( Sessions_CC__c ,"Yes",15,"No",0,0)+CASE( Sponsors_CC__c,"Yes",15,"No",0,0)+CASE( of_Events_CC__c,"1 event",10,"2-5 events",15,"6-10 events",20,"More than 10 events",20,"I don't have any events of that size",0,0)+CASE( Exhibitors_CC__c ,"1-25 exhibitors",5,"26-50 exhibitors",10,"51-100 exhibitors",15,"Over 100 exhibitors",15,"I have no exhibitors",0,0)+CASE( Mobile_App_CC__c ,"Yes, at one of my events",15,"No, I've never used a mobile event app",5,0))/20)+0.45),0)</formula>
        <label>CC Ac Scoring</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Ac_Star_Rating__c</fullName>
        <formula>Case( CC_Acc_Scoring__c,5,IMAGE("/img/samples/stars_500.gif", "image from Documents tab"),4,IMAGE("/img/samples/stars_400.gif", "image from Documents tab"),3,IMAGE("/img/samples/stars_300.gif", "image from Documents tab"),2,IMAGE("/img/samples/stars_200.gif", "image from Documents tab"),1,IMAGE("/img/samples/stars_100.gif", "image from Documents tab"),IMAGE("/img/samples/stars_000.gif", "image from Documents tab"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Ac Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Acc_Scoring__c</fullName>
        <label>CC Acc Scoring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>